Added installation of php & composer

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -21,7 +21,7 @@ bind-key -n M-n new-window -c "#{pane_current_path}"
 
 # Status bar
 set -g status-fg colour250
-set -g status-bg '#202020'
+set -g status-bg '#1D1F21'
 
 set -g status-left-length 0
 
