Enhance vim config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,8 +9,8 @@ set -g base-index 1
 #bind r source-file ~/.tmux.conf \; display "tmux reloaded !"
 
 # Split
-bind-key -n M-v split-window -h
-bind-key -n M-s split-window -v
+bind-key -n M-v split-window -h -c "#{pane_current_path}"
+bind-key -n M-s split-window -v -c "#{pane_current_path}"
 
 # Switch window
 bind-key -n M-h previous-window
