--- a/kitty/config/kitty.conf
+++ b/kitty/config/kitty.conf
@@ -2,11 +2,11 @@ font_family Fira Code Regular
 bold_font Fira Code Bold
 italic_font Fira Code Light
 bold_italic_font Fira Code Retina
-font_size 13.0
+font_size 12.0
 cursor_shape underline
-foreground #3c3836
-background #fbf1c7
-background_opacity 1
+foreground #ebdbb2
+background #000000
+background_opacity 0.8
 dynamic_background_opacity no
 
 selection_foreground #000000
@@ -14,32 +14,32 @@ selection_background #d79921
 
 # dark0 + gray
 color0 #282828
-color8 #7c6f64
+color8 #928374
 
 # neutral_red + bright_red
-color1 #A54242
-color9 #CC6666
+color1 #cc241d
+color9 #fb4934
 
 # neutral_green + bright_green
-color2 #8C9440
-color10 #B5BD68
+color2 #98971a
+color10 #b8bb26
 
 # neutral_yellow + bright_yellow
-color3 #DE935F
-color11 #F0C674
+color3 #d79921
+color11 #fabd2f
 
 # neutral_blue + bright_blue
-color4 #5F819D
-color12 #81A2BE
+color4 #458588
+color12 #83a598
 
 # neutral_purple + bright_purple
-color5 #85678F
-color13 #B294BB
+color5 #b16286
+color13 #d3869b
 
 # neutral_aqua + faded_aqua
-color6 #5E8D87
-color14 #8ABEB7
+color6 #689d6a
+color14 #8ec07c
 
 # light4 + light1
-color7 #707880
-color15 #C5C8C6
+color7 #a89984
+color15 #ebdbb2
