Added tmux shortcuts

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,6 +16,10 @@ bind-key -n M-s split-window -v -c "#{pane_current_path}"
 bind-key -n M-h previous-window
 bind-key -n M-l next-window
 
+# Move window
+bind-key -n M-j swap-window -t -1
+bind-key -n M-k swap-window -t +1
+
 # New window
 bind-key -n M-n new-window -c "#{pane_current_path}"
 
