--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -37,7 +37,7 @@ font-6 = "Font Awesome 5 Brands:pixelsize=11:antialias=true;1"
 
 modules-left = bspwm
 modules-center = date
-modules-right = volume battery_work powermenu
+modules-right = volume powermenu
 
 tray-position = right
 
@@ -62,52 +62,6 @@ label-empty = 
 
 label-empty-foreground = ${colors.foreground-alt}
 label-empty-padding = 1
-
-[module/battery_work]
-
-type = internal/battery
-battery = BAT0
-adapter = AC
-full-at = 95
-
-label-discharging = %percentage%%
-label-charging = %percentage%%
-label-full = %percentage%%
-
-format-discharging = <ramp-capacity> <label-discharging>
-format-full = <ramp-capacity> <label-full>
-format-charging =  <label-charging>
-
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-
-animation-charging-framerate = 750
-
-[module/battery_home]
-
-type = internal/battery
-battery = BAT1
-adapter = AC
-full-at = 95
-
-label-discharging = %percentage%%
-label-charging = %percentage%%
-label-full = %percentage%%
-
-format-discharging = <ramp-capacity> <label-discharging>
-format-full = <ramp-capacity> <label-full>
-format-charging =  <label-charging>
-
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-
-animation-charging-framerate = 750
 
 [module/date]
 type = internal/date
