fix: nvim plugin configuration (python issue)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,8 @@ set -g base-index 1
 #unbind r
 #bind r source-file ~/.tmux.conf \; display "tmux reloaded !"
 
+source /usr/lib/python3.8/site-packages/powerline/bindings/tmux/powerline.conf
+
 # Split
 bind-key -n M-v split-window -h -c "#{pane_current_path}"
 bind-key -n M-s split-window -v -c "#{pane_current_path}"
