fix: bspwmrc and set_desktops

--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -177,7 +177,7 @@ tray-maxsize = 16
 ; Enable pseudo transparency
 ; Will automatically be enabled if a fully transparent
 ; background color is defined using `tray-background`
-tray-transparent = false
+;tray-transparent = false
 
 ; Background color for the tray container
 ; ARGB color (e.g. #f00, #ff992a, #ddff1023)
