feat: configure tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,11 +4,9 @@ set -g prefix M-a
 # Base index for windows (1 instead of 0)
 set -g base-index 1
 
-# Conf reloading
-#unbind r
-#bind r source-file ~/.tmux.conf \; display "tmux reloaded !"
-
-source /usr/lib/python3.8/site-packages/powerline/bindings/tmux/powerline.conf
+# reload
+unbind r
+bind r source-file $HOME/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 
 # Split
 bind-key -n M-v split-window -h -c "#{pane_current_path}"
@@ -18,22 +16,9 @@ bind-key -n M-s split-window -v -c "#{pane_current_path}"
 bind-key -n M-h previous-window
 bind-key -n M-l next-window
 
-# Move window
-bind-key -n M-j swap-window -t -1
-bind-key -n M-k swap-window -t +1
-
 # New window
 bind-key -n M-n new-window -c "#{pane_current_path}"
 
-# Status bar
-set -g status-fg colour250
-set -g status-bg '#1D1F21'
+set -g mouse on
 
-set -g status-left-length 0
-
-set -g status-right-length 30
-set -g status-right '#[fg=#3CBBDE,bg=default,bold]⮂#[fg=#194754,bg=#3CBBDE,bold] %H:%M '
-
-set-option -g status-justify left
-set -g window-status-format ' #[fg=#3CBBDE]#W #[fg=#969696,bg=default,bold]⮁'
-set -g window-status-current-format '#[fg=#194754,bg=#3CBBDE,bold] #W #[fg=#3CBBDE,bg=default,bold]⮀'
+source-file $HOME/.config/tmux/powerline/cyan.tmuxtheme
