--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,4 +21,10 @@ bind-key -n M-n new-window -c "#{pane_current_path}"
 
 set -g mouse on
 
+# enables mouse selection copy
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -se c -i"
+
+# fixes tmux appending previous copies
+bind -T copy-mode-vi enter send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
+
 source-file $HOME/.config/tmux/powerline/cyan.tmuxtheme
