Normalized tmux.conf and install Polyglot

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,4 @@
 set-option -g default-terminal "screen-256color"
-set -g prefix M-a
 
 # Base index for windows (1 instead of 0)
 set -g base-index 1
@@ -8,16 +7,16 @@ set -g base-index 1
 unbind r
 bind r source-file $HOME/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 
-# Split
-bind-key -n M-v split-window -h -c "#{pane_current_path}"
-bind-key -n M-s split-window -v -c "#{pane_current_path}"
-
 # Switch window
 bind-key -n M-h previous-window
 bind-key -n M-l next-window
 
 # New window
-bind-key -n M-n new-window -c "#{pane_current_path}"
+unbind n
+unbind p
+bind c new-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind '"' split-window -v -c "#{pane_current_path}"
 
 set -g mouse on
 
