--- a/etc/php/php.ini
+++ b/etc/php/php.ini
@@ -401,7 +401,7 @@ max_input_time = 60
 
 ; Maximum amount of memory a script may consume (128MB)
 ; http://php.net/memory-limit
-memory_limit = 128M
+memory_limit = 1G
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; Error handling and logging ;
@@ -896,7 +896,7 @@ extension=curl
 ;extension=gmp
 extension=iconv
 ;extension=imap
-;extension=intl
+extension=intl
 ;extension=sodium
 ;extension=ldap
 ;extension=mysqli
