feat: pimp polybar

--- a/.config/polybar/shades/bars.ini
+++ b/.config/polybar/shades/bars.ini
@@ -187,7 +187,7 @@ time-format = %H:%M
 ;   <bar-capacity>
 ;   <ramp-capacity>
 ;   <animation-charging>
-format-charging = <bar-capacity>
+format-charging = <ramp-capacity> <bar-capacity>
 format-charging-prefix = " "
 format-charging-background = ${color.shade1}
 format-charging-padding = 2
