--- a/.config/polybar/shades/colors.ini
+++ b/.config/polybar/shades/colors.ini
@@ -12,18 +12,18 @@
 ;; Use pywal.sh in scripts directory to use colors from an image/wallpaper.
 
 ;; main colors
-background = #1F1F1F
-foreground = #FFFFFF
-foreground-alt = #8F8F8F
+background = #0B263D
+foreground = #d9dee4
+foreground-alt = #979b9f
 
 ;; shades
-shade1 = #0D47A1
-shade2 = #1565C0
-shade3 = #1976D2
-shade4 = #1E88E5
-shade5 = #2196F3
-shade6 = #42A5F5
-shade7 = #64B5F6
-shade8 = #90CAF9
+shade1 = #2f4f60
+shade2 = #385d71
+shade3 = #406b82
+shade4 = #5186a3
+shade5 = #6191ab
+shade6 = #6f9bb3
+shade7 = #7ca4ba
+shade8 = #88acc0
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
