--- a/.config/polybar/shades/config.ini
+++ b/.config/polybar/shades/config.ini
@@ -138,10 +138,9 @@ font-1 = "Iosevka Nerd Font:pixelsize=14;4"
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left = launcher workspaces google github reddit gmail twitter
-modules-center =
-; modules-right = mpd updates alsa battery network date sysmenu
-modules-right = alsa battery network date sysmenu
+modules-left = launcher workspaces thunar gmail calendar spotify github slack trello
+modules-center = 
+modules-right = spotify-status pulseaudio battery network date sysmenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
