--- a/.config/polybar/shades/modules.ini
+++ b/.config/polybar/shades/modules.ini
@@ -7,86 +7,6 @@
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-[module/alsa]
-type = internal/alsa
-
-; Soundcard to be used
-; Usually in the format hw:# where # is the card number
-; You can find the different card numbers in `/proc/asound/cards`
-master-soundcard = default
-speaker-soundcard = default
-headphone-soundcard = default
-
-; Name of the master, speaker and headphone mixers
-; Use the following command to list available mixer controls:
-; $ amixer scontrols | sed -nr "s/.*'([[:alnum:]]+)'.*/\1/p"
-; If master, speaker or headphone-soundcard isn't the default, 
-; use `amixer -c # scontrols` instead where # is the number 
-; of the master, speaker or headphone soundcard respectively
-;
-; Default: Master
-master-mixer = Master
-
-; Optionally define speaker and headphone mixers
-; Default: none
-;;speaker-mixer = Speaker
-; Default: none
-;;headphone-mixer = Headphone
-
-; NOTE: This is required if headphone_mixer is defined
-; Use the following command to list available device controls
-; $ amixer controls | sed -r "/CARD/\!d; s/.*=([0-9]+).*name='([^']+)'.*/printf '%3.0f: %s\n' '\1' '\2'/e" | sort
-; You may also need to use `amixer -c # controls` as above for the mixer names
-; Default: none
-;;headphone-id = 9
-
-; Use volume mapping (similar to amixer -M and alsamixer), where the increase in volume is linear to the ear
-; Default: false
-;;mapped = true
-
-; Interval for volume increase/decrease (in percent points)
-; Default: 5
-interval = 5
-
-; Available tags:
-;   <label-volume> (default)
-;   <ramp-volume>
-;   <bar-volume>
-format-volume = <ramp-volume> <label-volume>
-format-volume-background = ${color.shade6}
-format-volume-padding = 2
-
-; Available tags:
-;   <label-muted> (default)
-;   <ramp-volume>
-;   <bar-volume>
-format-muted = <label-muted>
-format-muted-prefix = 婢
-format-muted-background = ${color.shade6}
-format-muted-padding = 2
-
-; Available tokens:
-;   %percentage% (default)
-label-volume = %percentage%%
-
-; Available tokens:
-;   %percentage% (default
-label-muted = " Muted"
-label-muted-foreground = ${color.foreground}
-
-; Only applies if <ramp-volume> is used
-ramp-volume-0 = 奄
-ramp-volume-1 = 奔
-ramp-volume-2 = 墳
-
-; If defined, it will replace <ramp-volume> when
-; headphones are plugged in to `headphone_control_numid`
-; If undefined, <ramp-volume> will be used for both
-; Only applies if <ramp-volume> is used
-ramp-headphones-0 = 
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
 [module/backlight]
 ;type = internal/xbacklight
 type = internal/backlight
@@ -196,164 +116,6 @@ animation-charging-framerate = 750
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-;;[module/bspwm]
-;;type = internal/bspwm
-
-; Only show workspaces defined on the same output as the bar
-; NOTE: The bspwm and XRandR monitor names must match, which they do by default.
-; Default: true
-;;pin-workspaces = true
-
-; Output mode flags after focused state label
-; Default: false
-;;inline-mode = false
-
-; Create click handler used to focus workspace
-; Default: true
-;;enable-click = false
-
-; Create scroll handlers used to cycle workspaces
-; Default: true
-;;enable-scroll = false
-
-; Set the scroll cycle direction 
-; Default: true
-;;reverse-scroll = false
-
-; Use fuzzy (partial) matching on labels when assigning 
-; icons to workspaces
-; Example: code;♚ will apply the icon to all workspaces 
-; containing 'code' in the label
-; Default: false
-;;fuzzy-match = true
-
-; ws-icon-[0-9]+ = label;icon
-; Note that the label needs to correspond with the bspwm workspace name
-;;ws-icon-0 = code;♚
-;;ws-icon-1 = office;♛
-;;ws-icon-2 = graphics;♜
-;;ws-icon-3 = mail;♝
-;;ws-icon-4 = web;♞
-;;ws-icon-default = ♟
-
-; Available tags:
-;   <label-monitor>
-;   <label-state> - gets replaced with <label-(focused|urgent|occupied|empty)>
-;   <label-mode> - gets replaced with <label-(monocle|tiled|fullscreen|floating|locked|sticky|private)>
-; Default: <label-state>
-;;format = <label-state> <label-mode>
-
-; Available tokens:
-;   %name%
-; Default: %name%
-;;label-monitor = %name%
-
-; If any values for label-dimmed-N are defined, the workspace/mode
-; colors will get overridden with those values if the monitor is out of focus
-; To only override workspaces in a specific state, use:
-;   label-dimmed-focused
-;   label-dimmed-occupied
-;   label-dimmed-urgent
-;   label-dimmed-empty
-;;label-dimmed-foreground = #555
-;;label-dimmed-underline = ${bar/top.background}
-;;label-dimmed-focused-background = #f00
-
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-; Default: %icon%  %name%
-;;label-focused = %icon%
-;;label-focused-foreground = #ffffff
-;;label-focused-background = #3f3f3f
-;;label-focused-underline = #fba922
-
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-; Default: %icon%  %name%
-;;label-occupied = %icon%
-;;label-occupied-underline = #555555
-
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-; Default: %icon%  %name%
-;;label-urgent = %icon%
-;;label-urgent-foreground = #000000
-;;label-urgent-background = #bd2c40
-;;label-urgent-underline = #9b0a20
-
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-; Default: %icon%  %name%
-;;label-empty = %icon%
-;;label-empty-foreground = #55
-
-; The following labels will be used to indicate the layout/mode
-; for the focused workspace. Requires <label-mode>
-;
-; Available tokens:
-;   None
-;label-monocle = 
-;label-tiled = 
-;label-fullscreen = 
-;label-floating = 
-;label-pseudotiled = P
-;label-locked = 
-;label-locked-foreground = #bd2c40
-;label-sticky = 
-;label-sticky-foreground = #fba922
-;label-private = 
-;label-private-foreground = #bd2c40
-
-; Separator in between workspaces
-;;label-separator = |
-;;label-separator-padding = 2
-;;label-separator-foreground = #ffb52a
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/cpu]
-type = internal/cpu
-
-; Seconds to sleep between updates
-; Default: 1
-interval = 1
-
-; Available tags:
-;   <label> (default)
-;   <bar-load>
-;   <ramp-load>
-;   <ramp-coreload>
-;;format = <label> <ramp-coreload>
-format = <label>
-format-prefix = ﬙
-format-background = ${color.shade3}
-format-padding = 2
-
-; Available tokens:
-;   %percentage% (default) - total cpu load averaged over all cores
-;   %percentage-sum% - Cumulative load on all cores
-;   %percentage-cores% - load percentage for each core
-;   %percentage-core[1-9]% - load percentage for specific core
-label = " %percentage%%"
-
-; Spacing between individual per-core ramps
-;;ramp-coreload-spacing = 1
-;;ramp-coreload-0 = ${cpu.load0}
-;;ramp-coreload-1 = ${cpu.load1}
-
-;;ramp-load-0 = ${cpu.load0}
-;;ramp-load-1 = ${cpu.load1}
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
 [module/date]
 type = internal/date
 
@@ -386,365 +148,6 @@ label = %time%
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-[module/filesystem]
-type = internal/fs
-
-; Mountpoints to display
-mount-0 = /
-;;mount-1 = /home
-;;mount-2 = /var
-
-; Seconds to sleep between updates
-; Default: 30
-interval = 30
-
-; Display fixed precision values
-; Default: false
-fixed-values = true
-
-; Spacing between entries
-; Default: 2
-;;spacing = 4
-
-; Available tags:
-;   <label-mounted> (default)
-;   <bar-free>
-;   <bar-used>
-;   <ramp-capacity>
-format-mounted = <label-mounted>
-format-mounted-prefix = 
-format-mounted-background = ${color.shade5}
-format-mounted-padding = 2
-
-; Available tags:
-;   <label-unmounted> (default)
-format-unmounted = <label-unmounted>
-format-unmounted-prefix = 
-format-unmounted-background = ${color.shade5}
-format-unmounted-padding = 2
-
-; Available tokens:
-;   %mountpoint%
-;   %type%
-;   %fsname%
-;   %percentage_free%
-;   %percentage_used%
-;   %total%
-;   %free%
-;   %used%
-; Default: %mountpoint% %percentage_free%%
-label-mounted = " %free%"
-
-; Available tokens:
-;   %mountpoint%
-; Default: %mountpoint% is not mounted
-label-unmounted = " %mountpoint%: not mounted"
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-;;[module/github]
-;;type = internal/github
-
-; Accessing an access token stored in file
-;;token = ${file:/path/to/file/containing/github/access.token}
-
-; Accessing an access token stored in an environment variable
-;;token = ${env:GITHUB_ACCESS_TOKEN}
-
-; Whether empty notifications should be displayed or not
-;;empty-notifications = false
-
-; Number of seconds in between requests
-;;interval = 10
-
-; Available tags:
-;   <label> (default)
-;;format = <label>
-;;format-prefix = 
-
-; Available tokens:
-;   %notifications% (default)
-; Default: Notifications: %notifications%
-;;label = %notifications%
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-;;[module/i3]
-;;type = internal/i3
-
-; Only show workspaces defined on the same output as the bar
-;
-; Useful if you want to show monitor specific workspaces
-; on different bars
-;
-; Default: false
-;;pin-workspaces = true
-
-; This will split the workspace name on ':'
-; Default: false
-;;strip-wsnumbers = true
-
-; Sort the workspaces by index instead of the default
-; sorting that groups the workspaces by output
-; Default: false
-;;index-sort = true
-
-; Create click handler used to focus workspace
-; Default: true
-;;enable-click = false
-
-; Create scroll handlers used to cycle workspaces
-; Default: true
-;;enable-scroll = false
-
-; Wrap around when reaching the first/last workspace
-; Default: true
-;;wrapping-scroll = false
-
-; Set the scroll cycle direction 
-; Default: true
-;;reverse-scroll = false
-
-; Use fuzzy (partial) matching on labels when assigning 
-; icons to workspaces
-; Example: code;♚ will apply the icon to all workspaces 
-; containing 'code' in the label
-; Default: false
-;;fuzzy-match = true
-
-; ws-icon-[0-9]+ = label;icon
-; NOTE: The label needs to match the name of the i3 workspace
-;;ws-icon-0 = 1;♚
-;;ws-icon-1 = 2;♛
-;;ws-icon-2 = 3;♜
-;;ws-icon-3 = 4;♝
-;;ws-icon-4 = 5;♞
-;;ws-icon-default = ♟
-; NOTE: You cannot skip icons, e.g. to get a ws-icon-6
-; you must also define a ws-icon-5.
-
-; Available tags:
-;   <label-state> (default) - gets replaced with <label-(focused|unfocused|visible|urgent)>
-;   <label-mode> (default)
-;;format = <label-state> <label-mode>
-
-; Available tokens:
-;   %mode%
-; Default: %mode%
-;;label-mode = %mode%
-;;label-mode-padding = 2
-;;label-mode-background = #e60053
-
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-;   %output%
-; Default: %icon%  %name%
-;;label-focused = %index%
-;;label-focused-foreground = #ffffff
-;;label-focused-background = #3f3f3f
-;;label-focused-underline = #fba922
-;;label-focused-padding = 4
-
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-;   %output%
-; Default: %icon%  %name%
-;;label-unfocused = %index%
-;;label-unfocused-padding = 4
-
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-;   %output%
-; Default: %icon%  %name%
-;;label-visible = %index%
-;;label-visible-underline = #555555
-;;label-visible-padding = 4
-
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-;   %output%
-; Default: %icon%  %name%
-;;label-urgent = %index%
-;;label-urgent-foreground = #000000
-;;label-urgent-background = #bd2c40
-;;label-urgent-padding = 4
-
-; Separator in between workspaces
-;;label-separator = |
-;;label-separator-padding = 2
-;;label-separator-foreground = #ffb52a
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/memory]
-type = internal/memory
-
-; Seconds to sleep between updates
-; Default: 1
-interval = 1
-
-; Available tags:
-;   <label> (default)
-;   <bar-used>
-;   <bar-free>
-;   <ramp-used>
-;   <ramp-free>
-;   <bar-swap-used>
-;   <bar-swap-free>
-;   <ramp-swap-used>
-;   <ramp-swap-free>
-format = <label>
-format-prefix = 
-format-background = ${color.shade4}
-format-padding = 2
-
-; Available tokens:
-;   %percentage_used% (default)
-;   %percentage_free%
-;   %gb_used%
-;   %gb_free%
-;   %gb_total%
-;   %mb_used%
-;   %mb_free%
-;   %mb_total%
-;   %percentage_swap_used%
-;   %percentage_swap_free%
-;   %mb_swap_total%
-;   %mb_swap_free%
-;   %mb_swap_used%
-;   %gb_swap_total%
-;   %gb_swap_free%
-;   %gb_swap_used%
-
-label = " %mb_used%"
-
-; Only applies if <ramp-used> is used
-;;ramp-used-0 = ${memory.used0}
-;;ramp-used-1 = ${memory.used1}
-;;ramp-used-2 = ${memory.used2}
-
-; Only applies if <ramp-free> is used
-;;ramp-free-0 = ${memory.free0}
-;;ramp-free-1 = ${memory.free1}
-;;ramp-free-2 = ${memory.free2}
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/mpd]
-type = internal/mpd
-
-; Host where mpd is running (either ip or domain name)
-; Can also be the full path to a unix socket where mpd is running.
-;;host = 127.0.0.1
-;;port = 6600
-;;password = mysecretpassword
-
-; Seconds to sleep between progressbar/song timer sync
-; Default: 1
-interval = 1
-
-; Available tags:
-;   <label-song> (default)
-;   <label-time>
-;   <bar-progress>
-;   <toggle> - gets replaced with <icon-(pause|play)>
-;   <toggle-stop> - gets replaced with <icon-(stop|play)>
-;   <icon-random>
-;   <icon-repeat>
-;   <icon-repeatone> (deprecated)
-;   <icon-single> - Toggle playing only a single song. Replaces <icon-repeatone>
-;   <icon-consume>
-;   <icon-prev>
-;   <icon-stop>
-;   <icon-play>
-;   <icon-pause>
-;   <icon-next>
-;   <icon-seekb>
-;   <icon-seekf>
-format-online = <toggle> <label-song>
-;format-online-prefix = ﱘ
-format-online-background = ${color.shade8}
-format-online-foreground = #2E2E2E
-format-online-padding = 2
-
-;format-playing = ${self.format-online}
-;format-paused = ${self.format-online}
-;format-stopped = ${self.format-online}
-
-; Available tags:
-;   <label-offline>
-format-offline = <label-offline>
-format-offline-prefix = ﱘ
-format-offline-background = ${color.shade8}
-format-offline-foreground = #2E2E2E
-format-offline-padding = 2
-
-; Available tokens:
-;   %artist%
-;   %album-artist%
-;   %album%
-;   %date%
-;   %title%
-; Default: %artist% - %title%
-label-song =  "%artist% - %title%"
-label-song-maxlen = 25
-label-song-ellipsis = true
-
-; Available tokens:
-;   %elapsed%
-;   %total%
-; Default: %elapsed% / %total%
-label-time = %elapsed% / %total%
-
-; Available tokens:
-;   None
-label-offline = " Offline"
-
-; Only applies if <icon-X> is used
-icon-play = 喇
-icon-pause = 
-icon-stop = 
-icon-prev = 
-icon-next = 
-icon-seekb = 
-icon-seekf = 
-icon-random = 
-icon-repeat = 
-icon-repeatone = 
-icon-single = 
-icon-consume = 
-
-; Used to display the state of random/repeat/repeatone/single
-; Only applies if <icon-[random|repeat|repeatone|single]> is used
-toggle-on-foreground = ${color.foreground}
-toggle-off-foreground = ${color.background}
-
-; Only applies if <bar-progress> is used
-;;bar-progress-width = 45
-;;bar-progress-indicator = |
-;;bar-progress-fill = ─
-;;bar-progress-empty = ─
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-; If you use both a wired and a wireless network, just add 2 module definitions. For example
-[module/wired-network]
-type = internal/network
-interface = eth0
-
-[module/wireless-network]
-type = internal/network
-interface = wlp0s20f3
-
-; Normal Module
 [module/network]
 type = internal/network
 interface = wlp0s20f3
@@ -759,20 +162,15 @@ interval = 1.0
 ; Default: 0
 ;ping-interval = 3
 
-; @deprecated: Define min width using token specifiers (%downspeed:min% and %upspeed:min%)
-; Minimum output width of upload/download rate
-; Default: 3
-;;udspeed-minwidth = 5
-
 ; Accumulate values from all interfaces
 ; when querying for up/downspeed rate
 ; Default: false
-accumulate-stats = true
+; accumulate-stats = true
 
 ; Consider an `UNKNOWN` interface state as up.
 ; Some devices have an unknown state, even when they're running
 ; Default: false
-unknown-as-up = true
+; unknown-as-up = true
 
 ; Available tags:
 ;   <label-connected> (default)
@@ -804,12 +202,13 @@ format-disconnected-padding = 2
 ;   %downspeed% [wireless+wired]
 ;   %linkspeed% [wired]
 ; Default: %ifname% %local_ip%
-label-connected = "%{A1:networkmanager_dmenu &:}%essid%%{A}"
+label-connected = "%essid%"
 
 ; Available tokens:
 ;   %ifname%    [wireless+wired]
 ; Default: (none)
-label-disconnected = "%{A1:networkmanager_dmenu &:} Offline%{A}"
+label-disconnected = "Offline"
+
 ;;label-disconnected-foreground = #66ffffff
 
 ; Available tokens:
@@ -885,6 +284,8 @@ label-muted-foreground = ${color.foreground}
 ramp-volume-0 = 奄
 ramp-volume-1 = 奔
 ramp-volume-2 = 墳
+
+click-right = pavucontrol
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
