--- a/.config/polybar/shades/user_modules.ini
+++ b/.config/polybar/shades/user_modules.ini
@@ -112,30 +112,61 @@ type = custom/text
 content-foreground = ${color.foreground-alt}
 content-padding = 2
 
-[module/google]
-inherit = module/links
-content = 
-click-left = exo-open https://www.google.com/ &
-
 [module/github]
 inherit = module/links
 content = 
 click-left = exo-open https://www.github.com/ &
-
-[module/reddit]
-inherit = module/links
-content = 
-click-left = exo-open https://www.reddit.com/ &
 
 [module/gmail]
 inherit = module/links
 content = 
 click-left = exo-open https://mail.google.com/ &
 
-[module/twitter]
+[module/trello]
 inherit = module/links
-content = 
-click-left = exo-open https://www.twitter.com/ &
+content = 僧
+click-left = exo-open https://trello.com/ &
+
+[module/slack]
+type = custom/text
+content-foreground = ${color.foreground-alt}
+content-padding = 2
+content = 聆
+click-left = slack &
+
+[module/calendar]
+inherit = module/links
+content = 
+click-left = exo-open https://calendar.google.com/calendar/u/1/r &
+
+[module/thunar]
+type = custom/text
+content-foreground = ${color.foreground-alt}
+content-padding = 2
+content = 
+click-left = thunar &
+
+[module/spotify]
+type = custom/text
+content-foreground = ${color.foreground-alt}
+content-padding = 2
+content = 阮
+click-left = spotify &
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/spotify-status]
+type = custom/script
+interval = 1
+format-prefix = " "
+format = <label>
+exec = python ~/.config/polybar/shades/scripts/spotify-status.py -f 'ﱘ {artist}: {song}'
+format-background = ${color.shade7}
+#format-underline = #1db954
+format-padding = 2
+click-left = playerctl play-pause
+double-click-left = playerctl next
+click-right = playerctl previous
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -189,48 +220,5 @@ label-separator = " | "
 ;;label-open-foreground = ${color.foreground}
 ;;label-close-foreground = ${color.background}
 ;;label-separator-foreground = ${color.background}
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/menu]
-type = custom/menu
-
-; If true, <label-toggle> will be to the left of the menu items (default).
-; If false, it will be on the right of all the items.
-expand-right = true
-
-; "menu-LEVEL-N" has the same properties as "label-NAME" with
-; the additional "exec" property
-;
-; Available exec commands:
-;   menu-open-LEVEL
-;   menu-close
-; Other commands will be executed using "/usr/bin/env sh -c $COMMAND"
-menu-0-0 = Menu
-menu-0-0-exec = ~/.config/polybar/shades/scripts/launcher.sh &
-menu-0-1 = Files
-menu-0-1-exec = thunar &
-menu-0-2 = Terminal
-menu-0-2-exec = termite &
-menu-0-3 = Browser
-menu-0-3-exec = firefox &
-
-; Available tags:
-;   <label-toggle> (default) - gets replaced with <label-(open|close)>
-;   <menu> (default)
-; Note that if you use <label-toggle> you must also include
-; the definition for <label-open>
-
-format = <label-toggle> <menu>
-format-background = ${color.shade1}
-format-foreground = ${color.foreground}
-format-padding = 2
-
-label-open = 
-label-close = 
-
-; Optional item separator
-; Default: none
-label-separator = " | "
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
