--- a/.config/polybar/shades/config.ini
+++ b/.config/polybar/shades/config.ini
@@ -37,7 +37,7 @@ include-file = ~/.config/polybar/shades/user_modules.ini
 ; If unspecified, the application will pick the first one it finds.
 ; $ polybar -m | cut -d ':' -f 1
 ; $ xrandr -q | grep " connected" | cut -d ' ' -f1
-monitor =
+monitor = ${env:MONITOR}
 
 ; Use the specified monitor as a fallback if the main one is not found.
 monitor-fallback =
@@ -139,7 +139,7 @@ font-1 = "Iosevka Nerd Font:pixelsize=14;4"
 ;   modules-right = ipc clock
 
 modules-left = launcher workspaces thunar gmail calendar spotify github slack trello
-modules-center = 
+modules-center =
 modules-right = spotify-status pulseaudio battery network date sysmenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
