fix: nvim-bufferline

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,7 @@
-set-option -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+set-option -sg escape-time 10
+set-option -g focus-events on
 
 # Base index for windows (1 instead of 0)
 set -g base-index 1
