fix: polybar battery module when charging

--- a/.config/polybar/shades/modules.ini
+++ b/.config/polybar/shades/modules.ini
@@ -54,7 +54,8 @@ time-format = %H:%M
 ;   <bar-capacity>
 ;   <ramp-capacity>
 ;   <animation-charging>
-format-charging = <animation-charging>
+format-charging = <animation-charging> <label-charging>
+format-charging-padding = 2
 
 ; Available tags:
 ;   <label-discharging> (default)
