update tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,12 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 set-option -sg escape-time 10
 set-option -g focus-events on
 
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+
 # Base index for windows (1 instead of 0)
 set -g base-index 1
 
@@ -30,3 +36,5 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xc
 bind -T copy-mode-vi enter send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
 
 source-file $HOME/.config/tmux/powerline/gray.tmuxtheme
+
+run '~/.tmux/plugins/tpm/tpm'
