feat: switch on the light of nvim lsp

--- a/.config/polybar/shades/config.ini
+++ b/.config/polybar/shades/config.ini
@@ -140,7 +140,7 @@ font-1 = "Iosevka Nerd Font:pixelsize=14;4"
 
 modules-left = launcher workspaces thunar gmail calendar spotify github slack trello
 modules-center =
-modules-right = spotify-status pulseaudio battery network date sysmenu
+modules-right = spotify-status pulseaudio battery network wired-network date sysmenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -169,7 +169,7 @@ locale =
 ;   center
 ;   right
 ;   none
-tray-position = none
+tray-position = center
 
 ; If true, the bar will not shift its
 ; contents when the tray changes
