--- a/.config/polybar/shades/modules.ini
+++ b/.config/polybar/shades/modules.ini
@@ -149,6 +149,19 @@ label = %time%
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
+[module/wired-network]
+type = internal/network
+interface = enp0s31f6
+interval = 1.0
+format-connected = <label-connected>
+format-connected-prefix = 
+format-connected-background = ${color.shade4}
+format-connected-padding = 2
+format-disconnected = <label-disconnected>
+format-disconnected-prefix = 
+format-disconnected-background = ${color.shade4}
+format-disconnected-padding = 2
+
 [module/network]
 type = internal/network
 interface = wlp0s20f3
