fix: vim config

--- a/.config/polybar/shades/user_modules.ini
+++ b/.config/polybar/shades/user_modules.ini
@@ -165,7 +165,7 @@ format-background = ${color.shade7}
 #format-underline = #1db954
 format-padding = 2
 click-left = playerctl play-pause
-double-click-left = playerctl next
+click-middle = playerctl next
 click-right = playerctl previous
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
