--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,13 +1,14 @@
-font_family Fira Code Regular
-bold_font Fira Code Bold
-italic_font Fira Code Light
-bold_italic_font Fira Code Retina
-font_size 12.0
+font_family MonoLisa\-Regular
+bold_font MonoLisa\-Bold
+italic_font MonoLisa\-RegularItalic
+bold_italic_font MonoLisa\-BoldItalic
+font_size 14.0
 cursor_shape underline
 foreground #ebdbb2
 background #000000
-background_opacity 0.8
+background_opacity 1
 dynamic_background_opacity no
+disable_ligatures always
 
 selection_foreground #000000
 selection_background #d79921
